# PauseToken

./: .gitignore  LICENSE  README.md  TODO.md  curriculum.md  experiments.md  models.md  new_experiments.md  pip_requirements.txt  pyproject.toml  requirements.txt  runaI_torch_requirements.txt  runai_torch_requirements.txt  setup.py  torch_requirements.txt
configs/: train.yaml  trl_train.yaml
configs/callbacks/: default.yaml
configs/data/: dataset_from_file.yaml  default.yaml  gsm8k.yaml  gsm8k_augmented_pause.yaml  gsm8k_ic.yaml  (+3 more)
data_generation/: gs8k_pause_injector.py  gsm8k_pause_injector.py
examples/: star_on_sb3.py
lm_stable_baselines/: utils.py
notebooks/: Add Tokens Example.ipynb  LoRA and Add Tokens Example.ipynb  embedding_wrapper.py  gsm8k_mistral_eval.ipynb  pause_token_analysis.ipynb  pretrained_pause_model_analysis.ipynb  star_on_sb3.py  star_sb3_with_questions_datasets.py  surgery_experiments.ipynb
result/: mistral_v1_outputs_test.json  mistral_v1_outputs_test_pause_token.json  output_mistral_instruct_v2_sft_gsm8k.json  rc_mistral_correctness_reward_outer_loop_2.json  rc_mistral_delta_reward_outer_loop_1.json  rc_mistral_delta_reward_outer_loop_2.json  rc_mistral_outer_loop_0.json
scripts/: commands.txt  merge_and_unload.py  schedule.sh
src/: Readme.md  behavior_cloning.py  collators.py  constraints.py  inf.sh  inv_modeling.py  pause_classifier_wrapper.py  pretrain.py  reward_conditioned.py  rewards.py  run_inference.py  run_inference_rc.py  sft.py  testing_inv_modeling.py  train.py  train.sh  trainers.py  trl_train.py  utils.py  wsft.py
(+365 files in other folders)
